UX fixes and fixed issues with setup fee
After testing on someone else's site discovered UX bug causing site
not to be setup correctly. Change some wording for better UX.

ProSite::email_notification now checks $arg['setup_fee'] to adjust
the 'receipt' accordingly.

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -866,6 +866,10 @@ ul.pricing-column ul.feature-section li {
 	font-weight: bold;
 }
 
+.pricing-column .price .setup-fee .whole {
+    font-size: 1.3em;
+}
+
 .pricing-column .price .dot,
 .pricing-column .price .decimal {
 	vertical-align: baseline;
