Fix issue with media library and upload quota.

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -1271,6 +1271,11 @@ ul.pricing-column.not-chosen-plan .button-box button {
     margin-right: 5px;
 }
 
+.attachments-browser #prosites-media-quota-display {
+    float: left;
+    width: 100%;
+}
+
 /* === DARK MODE === */
 
 .darkmode #gateways ul li,
