--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -914,6 +914,10 @@ ul.pricing-column ul.feature-section li {
 	/*font-size: 1em;*/
 }
 
+.pricing-column .level-summary.no-periods {
+    display: none;
+}
+
 .pricing-column.featured .price {
 
 }
