Additional styles added for checkout table and more...
Added styling options for the checkout tables. This still needs to be completed.

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -557,10 +557,6 @@ ul.pricing-column li, .pricing-column ul li {
 	margin:0;
 }
 
-.alternate {
-    background: rgba( 245, 245, 245, 1 );
-}
-
 
 li.summary {
 	position:relative;
@@ -591,7 +587,8 @@ li > .period-selector {
 .period-selector select {
 	font-size: 1em;
 	width: 100%;
-	border: 1px solid #888;
+    border-width: 1px;
+    border-style: solid;
 	padding: 5px 2px;
 }
 
@@ -613,8 +610,14 @@ li > .period-selector {
 
 .pricing-column .title,
 .pricing-column .summary {
-	padding: 0 10px;
+	/*padding: 0 10px;*/
 }
+
+.pricing-column .summary .price,
+.pricing-column .summary .level-summary {
+    padding: 0 5px;
+}
+
 
 .pricing-column.featured .title {
 	/* IE 9 */
@@ -654,7 +657,6 @@ ul.pricing-column ul.feature-section li {
 }
 .feature-section .icon-tick:before {
 	font-family: dashicons;
-	color: #00CE8A;
 	font-size:2em;
 	content: "\f147";
 	line-height: 1em;
@@ -662,7 +664,6 @@ ul.pricing-column ul.feature-section li {
 
 .feature-section .icon-cross:before {
 	font-family: dashicons;
-	color: #B6B6B6;
 	font-size:2em;
 	content: "\f335";
 	line-height: 1em;
@@ -681,17 +682,11 @@ ul.pricing-column ul.feature-section li {
 	font-size: 1.6em;
 	font-weight: bold;
 	padding: 20px 0;
-	border: 1px solid #B6B6B6;
+    border-style: solid;
+    border-width: 1px;
 	position: relative;
 	border-bottom: none;
     width: 100%;
-}
-
-.pricing-column .title:after {
-	content:"";
-	display:block;
-	border-bottom: 2px solid #B6B6B6;
-	margin: 20px 10px 0 10px;
 }
 
 
@@ -705,8 +700,7 @@ ul.pricing-column ul.feature-section li {
 
 .pricing-column .summary {
 	/*background: #fff;*/
-
-	border: 1px solid #B6B6B6;
+    border-width: 1px;
 	border-style: none solid;
 	/*position: relative;*/
 	font-size: 0.8em;
@@ -721,7 +715,7 @@ ul.pricing-column ul.feature-section li {
 }
 
 .pricing-column .summary.no-periods {
-    border: 1px solid #B6B6B6;
+    border-width: 1px;
     border-style: none solid;
     /*position:relative;*/
     /*font-size: 1em;*/
@@ -742,7 +736,8 @@ ul.pricing-column ul.feature-section li {
 	/*border-width: 1px;*/
 	/*border-color: #888;*/
 	/*display:block;*/
-	border:1px solid #B6B6B6;
+    border-width: 1px;
+    border-style: solid;
 	padding: 5px;
 	/*text-align: left;*/
 	/*float:left;*/
@@ -758,17 +753,12 @@ ul.pricing-column ul.feature-section li {
 .pricing-column .summary .period-selector select {
 	width: 100%;
 }
-.pricing-column .summary .period-selector select:-moz-focusring {
-	color: transparent;
-	text-shadow: 0 0 0 #000;
-}
-
 
 .pricing-column .sub-title {
 	/*border-style: solid none solid solid;*/
 	/*border-width: 1px;*/
 	/*border-color: #888;*/
-	border:1px solid #B6B6B6;
+    border-width: 1px;
 	border-style: none solid;
 	font-size: 0.8em;
     margin:0;
@@ -783,24 +773,23 @@ ul.pricing-column ul.feature-section li {
 	/*background: #fff;*/
 }
 .pricing-column .sub-title.no-header {
-
 }
 .pricing-column .feature-section {
-	/*B6B6B6*/
-	border:1px solid #B6B6B6;
-	border-top: none;
-	border-bottom: none;
+    border-width: 1px;
+    border-style: none solid;
 }
 
 .pricing-column:first-child .feature-section {
-	border-bottom: 1px solid #B6B6B6;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
 	text-align: right;
 }
 
 .pricing-column .button-box {
 	padding: 0 10px 10px 10px;
-	border:1px solid #B6B6B6;
-	border-top:0;
+    border-style: solid;
+    border-width: 1px;
+	border-top:none;
     clear:both;
 }
 
@@ -864,7 +853,6 @@ ul.pricing-column ul.feature-section li {
 	padding-top:10px;
 }
 .pricing-column .price .symbol {
-	color: #58636F;
 	vertical-align: top;
 	position:relative;
 	top: 0.5em;
@@ -885,7 +873,6 @@ ul.pricing-column ul.feature-section li {
 .pricing-column .price .decimal {
 	vertical-align: baseline;
 	/*font-size:1.4em;*/
-	color: #58636F;
 }
 
 .pricing-column .price .period {
@@ -991,13 +978,13 @@ ul.pricing-column ul.feature-section li {
 }
 
 .pricing-column .coupon-box.coupon-valid:after {
+    font-family: dashicons;
     content: "\f147";
-    color: #00CE8A;
 }
 
 .pricing-column .coupon-box.coupon-invalid:after {
+    font-family: dashicons;
     content: "\f158";
-    color: #B6B6B6;
     /* IE 9 */
     -ms-transform: scale(0.8,0.8);
     /* Chrome, Safari, Opera */
@@ -1025,7 +1012,8 @@ ul.pricing-column ul.feature-section li {
     top:0;
 }
 .plan-price.original-amount.scratch:after {
-    border-bottom: 1px solid red;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
     content: "";
     display: block;
     margin: 0 auto;
@@ -1051,13 +1039,6 @@ ul.pricing-column ul.feature-section li {
     /*z-index: 10;*/
 /*}*/
 
-ul.pricing-column.chosen-plan {
-    background: rgba( 128, 128, 128, 0.1 );
-}
-
-ul.pricing-column.chosen-plan .alternate {
-    background: rgba( 128, 128, 128, 0.2 );
-}
 
 ul.pricing-column.not-chosen-plan .button-box button {
     /* IE 8 */
@@ -1090,18 +1071,11 @@ ul.pricing-column.not-chosen-plan .button-box button {
 }
 
 #gateways ul li.ui-state-default {
-    background: rgba( 245, 245,245, 0.2 );
-    border: 1px solid #F5F5F5;
+    border-style: solid;
+    border-widows: 1px;
 }
-
-#gateways ul li.ui-state-active {
-    /*border: 1px solid #888888;*/
-    background: #F5F5F5;
-}
-
 
 #gateways-1, #gateways-2, #gateways-3 {
-    background: #F5F5F5;
     padding: 10px;
 }
 
@@ -1236,7 +1210,6 @@ ul.pricing-column.not-chosen-plan .button-box button {
 .pricing-column.grid-checkout .coupon-box.coupon-valid:before {
     font-family: "dashicons";
     content: "\f147";
-    color: #00CE8A;
     position: absolute;
     float:left;
     margin-left: 5px;
@@ -1249,7 +1222,6 @@ ul.pricing-column.not-chosen-plan .button-box button {
 .pricing-column.grid-checkout .coupon-box.coupon-invalid:before {
     font-family: "dashicons";
     content: "\f158";
-    color: #B6B6B6;
     /* IE 9 */
     -ms-transform: scale(0.8,0.8);
     /* Chrome, Safari, Opera */
@@ -1262,13 +1234,15 @@ ul.pricing-column.not-chosen-plan .button-box button {
 }
 
 .tax-checkout-notice {
-    border: 1px solid #b6b6b6;
+    border-style: solid;
+    border-width: 1px;
     font-size: 0.8em;
     text-align: center;
     margin-top: 25px;
 }
 .tax-checkout-evidence {
-    border: 1px solid #b6b6b6;
+    border-style: solid;
+    border-width: 1px;
     font-size: 0.8em;
     text-align: left;
     padding: 5px;
