--- a/pro-sites-files/css/pricing-tables/option2.css
+++ b/pro-sites-files/css/pricing-tables/option2.css
@@ -59,7 +59,7 @@
     -moz-border-radius: 100px;
     -webkit-border-radius: 100px;
     margin: 0 auto;
-    padding: 25px 0;
+    padding: 20px 0 30px;
     width: 125px;
 
     -moz-box-shadow: 0 5px 20px #ddd inset, 0 3px 0 #999 inset;
@@ -70,6 +70,15 @@
 .pricing-column .summary .level-summary {
     color: #f1f1f1;
 }
+
+.plan-price.original-amount.scratch {
+    font-size: 0.5em;
+    opacity: 0.5;
+    position: absolute;
+    right: 30%;
+    top: 5%;
+}
+
 
 .period-selector select {
     border-color: #444;
