Checkout Page: styling issue when only 1 level and period is enabled, Divison by zero, highlight fetured level

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -717,9 +717,9 @@ ul.pricing-column ul.feature-section li {
 	font-weight: bolder;
 }
 .pricing-column:first-child .summary {
-	border: none;
-	/*position:relative;*/
-	/*font-size: 1em;*/
+	/*border: none;*/
+	position:relative;
+	font-size: 1em;
 }
 
 .pricing-column .summary.no-periods {
