Hide create a new site link from dashboard if allow multiple signup is disabled

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -1106,6 +1106,9 @@ ul.pricing-column.not-chosen-plan .button-box button {
 }
 
 /* === GATEWAYS === */
+.checkout-gateways {
+    margin-top: 30px;
+}
 #gateways ul {
     margin:0;
 }
