Pricing table styling fixes

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -717,7 +717,7 @@ ul.pricing-column ul.feature-section li {
 	font-weight: bolder;
 }
 .pricing-column:first-child .summary {
-	/*border: none;*/
+	border: none;
 	position:relative;
 	font-size: 1em;
 }
