Updates to PayPal gateway
- Fixed: When switching gateways the old gateway will attempt to cancel when setting up the new gateway.
- Updated: Information message will appear to users wanting to change their payment gateway.
- Fixed: Upgrading with PayPal while still within trial period.

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -1112,6 +1112,11 @@ ul.pricing-column.not-chosen-plan .button-box button {
     /*opacity: 0.5;*/
 }
 
+ul.pricing-column.chosen-plan {
+	background: rgba( 128, 128, 128, 0.1 );
+}
+
+
 /* === GATEWAYS === */
 .checkout-gateways {
     margin-top: 30px;
